[project]
name = "song-player"
version = "0.1.0"
description = ""
authors = [
    {name = "beichenstanly",email = "zhengxgen@163.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-vlc (>=3.0.21203,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
